# functional_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/: compatibility.h  export_def.h  functional_set.h  functional_vector.h  index_range.h  map.h  optional.h  optional_index.h  set.h  vector.h
src/: CMakeLists.txt  index_range.cc  optional_index.cc
src/include/: functional_vector.h  index_range.h
tests/: CMakeLists.txt  functional_set_test.cc  functional_vector_test.cc  index_range_test.cc  map_test.cc  optional_index_test.cc  optional_test.cc  set_test.cc  test_types.h  vector_test.cc  warnings.h
